--- a/Changes
+++ b/Changes
@@ -1,14 +1,24 @@
 Revision history for Perl extension Win32::Console::ANSI
 
-0.01  01/11/2002
+0.01  2002/11/01
 	- original version; created by h2xs 1.21 with options
 		-A -X -n Win32::ANSIConsole version 0.01 beta
 
-0.02  13/07/2003
+0.02  2003/07/13
   - module renamed Win32::Console::ANSI for the CPAN (brian d foy)
   - this module use now the module Encode for codepages conversion.
     Thanks to Benjamin Goldberg for the suggestion.
   - added more escape sequences for compatibility with Term::ANSIScreen.
     Thanks to Autrijus Tang for the encouragements.
   - fixed a bug about format. Thanks to Josh Spohr to report it.
+
+0.03  2003/07/21
+  - bug: print $s; with $s undef gives two error messages.
+    fixed: now the module croaks.
+  - bug: print "\e[m" x 100; dies with error message:
+    Deep recursion on subroutine "Win32::Console::ANSI::IO::_PrintString"
+    fixed: the routine is now iterative, not recursive.
+  - bug: \e(K now restore the original code page.
+  - fixed some typo in doc and test.pl
+
 
