Import of JLMOREL/Win32-Console-ANSI-0.07 from CPAN.
gitpan-cpan-distribution: Win32-Console-ANSI
gitpan-cpan-version:      0.07
gitpan-cpan-path:         JLMOREL/Win32-Console-ANSI-0.07.tar.gz
gitpan-cpan-author:       JLMOREL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -31,9 +31,16 @@ Revision history for Perl extension Win32::Console::ANSI
   - bug: print '0' print nothing! -fixed
     Thanks to Daniel Schoene to report this bug.
     
-0.06  20/09/2004
+0.06  2004/09/20
   - bug: with \e[#K, if the cursor is on the last line of the console,
          a new line is added. -fixed.
     Thanks to Eric Zmiro for reporting this bug.
   - STDIN and STDERR are tied only if there are tty
 
+0.07  2005/01/02
+  - it's now possible to redirect STDERR or STDOUT to a file.
+    Request from Phoeares Tsai.
+  - added two auxiliary functions 'Title' and 'Cursor'.
+  - improved the doc (limitations)
+  
+  
