--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Win32::Console::ANSI version 0.07
+Win32::Console::ANSI version 1.00
 =================================
 
 Windows NT/2000/XP does not support ANSI escape sequences in
@@ -19,7 +19,7 @@ All suggestion or remark is welcome.
 
 DEPENDENCIES
 
-This module requires the module Win32::Console and Win32API::Registry.
+None
 
 INSTALLATION
 
