--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Win32::Console::ANSI version 1.00
+Win32::Console::ANSI version 1.01
 =================================
 
-Windows NT/2000/XP does not support ANSI escape sequences in
+Windows NT/2000/XP/2003/Vista does not support ANSI escape sequences in 
 Win32 Console applications.
 This module emulate an ANSI console for the script which uses it.
 
@@ -10,18 +10,27 @@ to DOS code page (the so-called ANSI to OEM conversion).
 This conversion permits the display of the accented characters
 in the console like in a Windows-based editor.
 
-It works on all Win32 platforms.
-
-Caution: this module is still in beta stage; don't use it in a
-production script.
+It works on all Win32 platforms:
+Win98, Win98SE, Win2000, WinXP, Windows Server 2003, Vista.
 
 All suggestion or remark is welcome.
 
 DEPENDENCIES
 
-None
+Win32::Clipboard, Win32::Event and Win32::Process are necessary only for 
+the tests.
 
 INSTALLATION
+
+A recent SDK is necessary to compile this module.
+
+If your SDK is too old the compiler emit the fatal error C1189 with the 
+message: "your SDK is too old... (see the README file in the distro)"
+Download and install the last SDK for your platform from Microsoft:
+
+http://www.microsoft.com/msdownload/platformsdk/sdkupdate/
+  or
+http://www.microsoft.com/downloads/browse.aspx?displaylang=en&productID=6F6B7367-A11C-49C3-8CC6-92E74D092146
 
 To install this module, just follow the usual procedure:
 
@@ -32,7 +41,7 @@ To install this module, just follow the usual procedure:
 
 COPYRIGHT AND LICENCE
 
-Copyright (c) 2005 J-L Morel. All rights reserved.
+Copyright (c) 2008 J-L Morel. All rights reserved.
 
 This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
