--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Win32::Console::ANSI version 1.01
+Win32::Console::ANSI version 1.02
 =================================
 
 Windows NT/2000/XP/2003/Vista does not support ANSI escape sequences in 
@@ -17,8 +17,7 @@ All suggestion or remark is welcome.
 
 DEPENDENCIES
 
-Win32::Clipboard, Win32::Event and Win32::Process are necessary only for 
-the tests.
+Win32::Pipe and Win32::Process are necessary only for the tests.
 
 INSTALLATION
 
@@ -41,7 +40,7 @@ To install this module, just follow the usual procedure:
 
 COPYRIGHT AND LICENCE
 
-Copyright (c) 2008 J-L Morel. All rights reserved.
+Copyright (c) 2009 J-L Morel. All rights reserved.
 
 This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
