--- a/Changes
+++ b/Changes
@@ -70,3 +70,7 @@ Revision history for Perl extension Win32::Console::ANSI
   - Adding dependencies in the Makefile (thanks to Dominique Goncalves).
   - bug with Windows Vista64 + SP1 (RT#43592 and RT#43639) -fixed
     (thanks to Sisyphus)
+
+1.03  2009/03/07 
+  - Modifications of the xs so that the module can be compiled under 
+    Windows x64 (with Perl 64bits). (thanks to Sisyphus)
