--- a/Changes
+++ b/Changes
@@ -74,3 +74,7 @@ Revision history for Perl extension Win32::Console::ANSI
 1.03  2009/03/07 
   - Modifications of the xs so that the module can be compiled under 
     Windows x64 (with Perl 64bits). (thanks to Sisyphus)
+    
+1.04 2009/03/22
+  - New modification of the xs: the module can now be compiled under Windows 7
+    (32 and 64 bits, with Perl 32 and 64).
