--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Win32::Console::ANSI version 1.03
+Win32::Console::ANSI version 1.04
 =================================
 
 Windows NT/2000/XP/2003/Vista does not support ANSI escape sequences in 
@@ -11,7 +11,8 @@ This conversion permits the display of the accented characters
 in the console like in a Windows-based editor.
 
 It works on all Win32 platforms:
-Win98, Win98SE, Win2000, WinXP, Windows Server 2003, Vista (32 and 64 bits).
+Win98, Win98SE, Win2000, WinXP, Windows Server 2003, Vista (32 and 64 bits)
+Windows 7 - beta (32 and 64 bits).
 
 All suggestion or remark is welcome.
 
