--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Win32::Console::ANSI version 1.05
+Win32::Console::ANSI version 1.06
 =================================
 
 Windows NT/2000/XP/2003/Vista does not support ANSI escape sequences in
@@ -12,7 +12,7 @@ in the console like in a Windows-based editor.
 
 It works on all Win32 platforms:
 Win98, Win98SE, Win2000, WinXP, Windows Server 2003, Vista (32 and 64 bits)
-Windows 7 - beta (32 and 64 bits).
+Windows 7 (32 and 64 bits), Windows 8 (32 and 64 bits)
 
 All suggestion or remark is welcome.
 
