Import of JLMOREL/Win32-Console-ANSI-1.08 from CPAN.
gitpan-cpan-distribution: Win32-Console-ANSI
gitpan-cpan-version:      1.08
gitpan-cpan-path:         JLMOREL/Win32-Console-ANSI-1.08.tar.gz
gitpan-cpan-author:       JLMOREL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Win32::Console::ANSI
 
+1.08 2014/01/13
+  - added #define PERL_NO_GET_CONTEXT to XS code, for efficiency RT#92071
+    Thanks to Daniel Dragan.
+
 1.07 2014/01/11
   - Fix a bug about background/foreground colors.
     (thanks to Gilles Maisonneuve to report this bug).
